[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "rhythmic-ribbon-mcp"
version = "0.1.0"
description = "MCP server for rhythmic gymnastics ribbon dance visual vocabulary and aesthetic enhancement"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "fastmcp>=0.3.0",
    "pyyaml>=6.0"
]

[project.optional-dependencies]
dev = [
    "pytest>=7.0.0",
    "pytest-asyncio>=0.21.0"
]

[tool.setuptools.packages.find]
where = ["src"]

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]
asyncio_mode = "auto"
